--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,15 @@
+# Streamlit Cloud용 최소 requirements
 streamlit==1.29.0
+openai==1.6.1
 langchain==0.1.0
 langchain-openai==0.0.5
 langchain-community==0.0.10
 chromadb==0.4.22
-Flask==3.0.0
-requests==2.31.0
 pandas==2.1.4
 numpy==1.24.3
 python-dotenv==1.0.0
-openai==1.6.1
 tiktoken==0.5.2
 sentence-transformers==2.2.2
 tavily-python==0.3.0
 faiss-cpu==1.7.4
+requests==2.31.0
