Add Tavily as backup search alongside Perplexity
- Integrated Tavily search as fallback when Perplexity fails or returns limited results
- Added dual search system: Perplexity primary, Tavily backup
- Enhanced search reliability for questions that previously worked with Tavily
- Added tavily-python to requirements.txt

--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ numpy
 requests
 python-dotenv>=0.2.32
 langchain-text-splitters>=0.2.0
+tavily-python>=0.3.0
 
 # 데이터 처리 (Python 3.13 빌드 오류 해결)
 pandas>=2.2.0
