--- a/.env.example
+++ b/.env.example
@@ -18,3 +18,8 @@ PORT=8080
 # 춘천시 공공 API 키 (선택사항)
 # https://www.data.go.kr 에서 발급
 CHUNCHEON_API_KEY=your-public-api-key-here
+
+# 네이버 클라우드 플랫폼 Maps API 키 (선택사항 - 지도/길찾기용)
+# https://console.ncloud.com/naver-service/application 에서 발급
+X_NCP_APIGW_API_KEY_ID=your-naver-client-id-here
+X_NCP_APIGW_API_KEY=your-naver-client-secret-here
